# coursera-vsb-text-extraction

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  streamlit_app.py
src/: utils.py
