[project]
name = "coursera-text-extraction"
version = "0.1.0"
description = "Coursera Text Extractor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.39.3",
    "html2docx>=1.6.0",
    "pandas==2.3.0",
    "python-docx>=1.2.0",
    "python-dotenv==1.1.1",
    "streamlit>=1.32.0",
    "streamlit-authenticator>=0.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
